tests/lean/structure_elab_segfault.lean
structure test : Type := (f : ∀ x y, true)
